--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,9 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(PROGRAMS
+  scripts/mic.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
